Fixed css form issues on safari, icons and etc unalignment

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1671,7 +1671,13 @@ input#creditcard::-webkit-outer-spin-button {
 .hide-element {
     display: none;
 }
-
+input::-webkit-contacts-auto-fill-button {
+  visibility: hidden;
+  display: none !important;
+  pointer-events: none;
+  position: absolute;
+  right: 0;
+}
 
 /* Media Tag */
 
